# Albion-Command-Desk

./: .gitignore  CHANGELOG.md  PROMPTS.md  README.md  TASKS.md  UI_MODERNIZATION_PLAN.md  pcap_fixtures.py  pyproject.toml  tmp_main_head.qml
albion_dps/: __init__.py  __main__.py  cli.py  cli_clipboard.py  cli_ui.py  models.py  pipeline.py  settings.py
docs/: ARCHITECTURE.md  COMMUNITY_POSTS.md  DELIVERY_BACKLOG.md  GUI_PLAN.md  MARKET_ARCHITECTURE.md  MARKET_BACKLOG.md  MARKET_DATASET_UPDATE.md  MARKET_TROUBLESHOOTING.md  PYSIDE6_PLAN.md  TROUBLESHOOTING.md  UX_MINIMAL_RELEASE_PLAN.md
installer/: README.md
tests/: support_temp.py  test_capture_startup_policy.py  test_cli_history.py  test_cli_qt_only.py  test_cli_table.py  test_combat_mapper.py  test_combat_state.py  test_fame_tracker.py  test_goldens.py  test_gui_smoke.py  test_hps_pcap24.py  test_item_resolver.py  test_last_known_good_pointer.py  test_market_aod_client.py  test_market_cache.py  test_market_catalog.py  test_market_dataset_regression.py  test_market_engine.py  test_market_migration.py  test_market_planner.py  test_market_qt_state.py  test_market_recipes_from_items.py  test_market_recipes_pipeline.py  test_market_service.py  test_market_setup.py  test_meter.py  test_name_registry.py  test_npcap_runtime.py  test_operation_response_join.py  test_overkill_clamp.py  test_party_pcap27.py  test_party_pcap28_excludes_non_party.py  test_party_pcap29_excludes_non_party.py  test_party_pcap29_includes_party_member.py  test_party_pcap31_includes_party_member.py  test_party_pcap32_history_merge.py  test_party_pcap33_name_mapping.py  (+28 more)
(+190 files in other folders)
