[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "albion-command-desk"
version = "0.1.0"
description = "Albion Online combat and market operations desk"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
albion-command-desk = "albion_dps.cli:main"
albion-dps = "albion_dps.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
capture = ["pcapy-ng>=1.0.0"]
gui = ["textual>=0.45"]
gui-qt = ["PySide6>=6.6"]
all = ["pytest>=7.0", "pcapy-ng>=1.0.0", "textual>=0.45", "PySide6>=6.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["albion_dps*"]
exclude = ["wzor*", "tests*"]

[tool.setuptools.package-data]
"albion_dps.market" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
