[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "albion-command-desk"
version = "0.1.14"
description = "Albion Online combat and market operations desk"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]

[project.scripts]
albion-command-desk = "albion_dps.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
capture = ["pcapy-ng>=1.0.0"]
all = ["pytest>=7.0", "pcapy-ng>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["albion_dps*"]
exclude = ["wzor*", "tests*"]

[tool.setuptools.package-data]
"albion_dps.market" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
